(http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
as it is included in Scrooge's user's guide.

4.x
-----

- scrooge-core: `c.t.s.ThriftUnion` adds methods `containedValue` and
  `unionStructFieldInfo`. These were already a part of the generated Scala
  implementations for unions, but now it is defined on the trait. ``RB_ID=909576``

- scrooge-generator: Add parsing, AST, and Scala code generation
  support for annotations on enums, enum fields, services, and
  service methods. ``RB_ID=908556``
- scrooge-generator: Fix default values for collections in scala bindings ``RB_ID=908152``
- scrooge-generator: MethodIfaceBuilder#newMethodIface now returns
  a MethodIface. ``RB_ID=907700``

- scrooge-generator: Scala's types for ServiceIfaces are now a `Service` from
  `ThriftMethod.Args` to `ThriftMethod.SuccessType`, instead of `ThriftMethod.Args`
  to `ThriftMethod.Result`. This is a breaking API change though it should generally
  be easy to adapt existing code to it. ``RB_ID=908846``

4.14.0
------

No Changes

4.13.0
------

- scrooge-linter: Add thrift definition linter warnings if generated
  thrift will exceed JVM HotSpot ClipInlining check.
  ``RB_ID=896379``

4.12.0
------

- scrooge-generator: Remove check for 22 args when generating scala
  ServiceIface. Now that we no longer support Scala 2.10 we can always
  generate a case class for the generated scala ServiceIface.
  ``RB_ID=882203``
- scrooge-generator: Don't allow Structs and Typedefs with the same
  identifier. Structs and typedefs should not have the same name. This
  makes it difficult to properly support self-referencing types.
  ``RB_ID=881684``
- scrooge-generator: Fix pathological case for self-referencing
  types with Java generation. ``RB_ID=880813``

4.11.0
------

- scrooge-generator: Add support for self-referencing types from
  `pinsri` via https://github.com/twitter/scrooge/pull/244
  ``RB_ID=873802``

- scrooge: Remove unmaintained bin/ directory. ``RB_ID=873411``

4.10.0