@@ -57,34 +57,25 @@ trait ThriftUnion {
 
 /**
  * A trait encapsulating the logic for encoding and decoding a specific thrift struct
- * type.  The methods encoder and decoder are used by scrooge2 generated code, but are
- * now deprecated.  scrooge3 generated code uses encode and decode.
+ * type.
  */
 trait ThriftStructCodec[T <: ThriftStruct] {
   @throws(classOf[org.apache.thrift.TException])
-  def encode(t: T, oprot: TProtocol): Unit = encoder(t, oprot)
+  def encode(t: T, oprot: TProtocol): Unit
 
   @throws(classOf[org.apache.thrift.TException])
-  def decode(iprot: TProtocol): T = decoder(iprot)
+  def decode(iprot: TProtocol): T
 
   lazy val metaData: ThriftStructMetaData[T] = new ThriftStructMetaData(this)
-
-  @deprecated("your code is generated by an outdated version of scrooge-generator", "2.7.0")
-  def encoder: (T, TProtocol) => Unit
-
-  @deprecated("your code is generated by an outdated version of scrooge-generator", "2.7.0")
-  def decoder: TProtocol => T
 }
 
 /**
- * structs generated by scrooge3 will extends this base class, which provides implementations
- * for the deprecated encoder/decoder methods that depend on encode and decode, which are
- * generated.
+ * Introduced as a backwards compatible API bridge in Scrooge 3.
+ * Scala generated structs extend from this class.
+ *
+ * @see [[ThriftStructCodec]]
  */
 abstract class ThriftStructCodec3[T <: ThriftStruct] extends ThriftStructCodec[T] {
-  override val encoder: (T, TProtocol) => Unit = encode
-  override val decoder: TProtocol => T = decode
-
   protected def ttypeToString(byte: Byte): String = {
     // from https://github.com/apache/thrift/blob/master/lib/java/src/org/apache/thrift/protocol/TType.java
     byte match {
@@ -105,7 +96,6 @@ abstract class ThriftStructCodec3[T <: ThriftStruct] extends ThriftStructCodec[T
       case _            => "UNKNOWN"
     }
   }
-
 }
 
 /**
